--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@apathia/apathia": "^1.2.12",
-    "@apathia/apathia.icon-svg": "^0.1.4",
+    "@apathia/apathia": "1.2.17",
+    "@apathia/apathia.icon-svg": "^0.1.7",
     "@jridgewell/sourcemap-codec": "^1.4.14",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^18.11.18",
