--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "release": "node ./deploy.js"
   },
   "dependencies": {
     "@apathia/apathia": "^1.2.22",
@@ -45,6 +46,11 @@
     "typescript": "^4.9.4",
     "vite": "^4.0.4",
     "vite-plugin-prismjs": "^0.0.8",
-    "vue-tsc": "^1.0.24"
+    "vue-tsc": "^1.0.24",
+    "chalk": "^5.2.0",
+    "dotenv": "^16.1.4",
+    "node-scp": "^0.0.22",
+    "ora": "^5.4.1",
+    "ssh2": "^1.13.0"
   }
 }
